<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Berts Auto Parts</string>
    <string name="facebook_app_id">778009312869231</string>
    <string name="fb_login_protocol_scheme">fb778009312869231</string>
    <string name="image_description">Image Description</string>
    <string name="toolbar_title">Toolbar Title</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">I forgot password</string>
    <string name="sigin">Sign In</string>
    <string name="or">OR</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="sigin_with_facebook">Register with Facebook</string>
    <string name="Retailer">RETAILER</string>
    <string name="wholesaler">WHOLESALER</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_password">Confirm password</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email_coupons">Send me email for discount &amp; Coupon from \n Bert\'s Auto</string>
    <string name="reg_retailer">Register as a Retailer</string>
    <string name="terms_conditions">By press the Register button, you have also agreed</string>
    <string name="terms_conditions1"> with Bert\'s Auto Term &amp; Conditions</string>
    <string name="revenue">Revenue</string>
    <string name="zipcode">Zipcode</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="reg_wholesaler">Register as Wholesaler</string>
    <string name="forget_password_withouI">Forgot your password</string>
    <string name="forget_password_reason">Enter your email below receive your \n password reset instructions.</string>
    <string name="reset_link">Send Reset Email</string>
    <string name="login">"Login "</string>
    <string name="register">Register</string>
    <string name="forget_password_withouI_simple">Forget Password</string>
    <string name="home">Home</string>
    <string name="my_garage">My Garage</string>
    <string name="shop">Shop</string>
    <string name="live_chat">Live Chat</string>
    <string name="profile">Profile</string>
    <string name="hello">Hello,</string>
    <string name="guest">Guest</string>
    <string name="count">6</string>
    <string name="add_veh_desc">Add A Vehicle To Find Exact Fit Parts</string>
    <string name="add_veh_btn_txt">Add a Vehicle</string>
    <string name="search">Search VIN, Parts or Products</string>
    <string name="add_user_desc">Sign in to get special offers, deals \n and many more…</string>
    <string name="create_account">Create an Account</string>
    <string name="shopby">SHOP BY</string>
    <string name="gurantee_fit">Guaranteed Fit</string>
    <string name="fast_shipping">Fast shipping</string>
    <string name="local_returns">local returns</string>
    <string name="shopbyname">ShopByName</string>
    <string name="search_key_info">Search Keywords Information</string>
    <string name="search_key_info_desc">You can narrow your search results to specific parts, Products or VIN/Chassis Number. See example search keywords below</string>
    <string name="vin_info">VIN/Chassis Number Search</string>
    <string name="vin_info_desc">VIN: 1XXXXXXX234XX</string>
    <string name="partsnosearch_info">Parts Number Search</string>
    <string name="partsnosearch_info_desc" tools:ignore="Typos">GXXA1</string>
    <string name="prod_search_info_desc">rear brake pads</string>
    <string name="viewall">VIEW ALL</string>
    <string name="top_categories">Top Categories</string>
    <string name="brands">top brands</string>
    <string name="makes">top makes</string>
    <string name="headlight"><![CDATA[Headlights & Lighitings]]></string>
    <string name="total_results">5000 Results</string>
    <string name="sort_filter"><![CDATA[Sort & Filter]]></string>
    <string name="audi_a8_premium">2018 A3 Audi Premium</string>
    <string name="product_name">Power Stop K5975 Front and Rear Z23 Evolution…</string>
    <string name="parts_no">Part No: K5975</string>
    <string name="total_reviews">(120 Reviews)</string>
    <string name="fit_desc">Exact Fit with your vehicle</string>
    <string name="price">$130.49</string>
    <string name="btn_add">Add to Cart</string>
    <string name="side_view_mirrors">Side View Mirrors</string>
    <string name="search_products">Search Products</string>
    <string name="sort">Sort</string>
    <string name="k_metal">K-Metal</string>
    <string name="parts_name">Jeep CJ-Style Replacement Mirrors</string>
    <string name="total_reviews_count">(123)</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="hifein">-</string>
    <string name="str_new">New</string>
    <string name="model_name">Model Name</string>
    <string name="brand_name">Brand Name</string>
    <string name="vin_xasd">VIN:XASD</string>
    <string name="_2_0l_xxxxcs_fl_turbo">2.0L XXXXCS Fl Turbo</string>
    <string name="_2016">2016</string>
    <string name="vin">VIN</string>
    <string name="engine">Engine</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string-array name="year">
        <item>2021</item>
    </string-array>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="plus">+</string>
    <string name="cart">Cart</string>
    <string name="proceed">Proceed</string>
    <string name="order_status">Completed</string>
    <string name="txt_order_ID_label">Order ID</string>
    <string name="feb_28_2021_10_19">Feb 28,2021 – 10.19</string>
    <string name="txt_orders_label">Orders</string>
    <string name="txt_total_label">Total</string>
    <string name="_58_00">$58.00</string>
    <string name="confirmed_your_order">Confirmed Your Order</string>
    <string name="shipped_from_the_seller">Shipped from the seller</string>
    <string name="waiting">Waiting</string>
    <string name="shipping">Shipping</string>
    <string name="your_address">Your Address</string>
    <string name="delivery_in_progress">Delivery in progress</string>
    <string name="track_order_status">Track order status</string>
    <string name="cancel">Cancel</string>
    <string name="estimated_delivery_date_mar_17">Estimated delivery date : Mar 17</string>
    <string name="my_wishlist">Wishlist</string>
    <string name="afasdfasf">afasdfasf</string>
    <string name="now_available_n_stock_izuzu_and_mazda_parts">Now available \nstock IZUZU AND MAZDA Parts</string>
    <string name="shop_now">shop now</string>
    <string name="categories">Categories</string>
    <string name="brandss">Brands</string>
    <string name="triton_it">Triton IT</string>
    <string name="my_wishlistt">Wishlist</string>
    <string name="order_history">Order History</string>
    <string name="order_tracking">Order Tracking</string>
    <string name="receipts">Receipts</string>
    <string name="download_quotation">Download Quotation</string>
    <string name="about_us">About Us</string>
    <string name="log_out">Log out</string>
    <string name="setting">Setting</string>
    <string name="update_changes">Update Changes</string>
    <string name="delete">DELETE</string>
    <string name="edit">EDIT</string>
    <string name="salem_636009_tamilnadu">Salem, 636009, TamilNadu</string>
    <string name="_225_1_sample_abcd_nagar_main_road">225/1, Sample ABCD Nagar Main Road</string>
    <string name="chennai">chennai</string>
    <string name="_91_9003237255">+91 – 9003237255</string>
    <string name="_14_02_1994">14/02/1994</string>
    <string name="mohammad_ashfaq">Mohammad Ashfaq</string>
    <string name="add_new_address">Add New Address</string>
    <string name="default_val">Default</string>
    <string name="detail_address">Detail Address</string>
    <string name="save_address">Save Address</string>
    <string name="set_as_default">Set as Default</string>
    <string name="list_of_vehicles">list of vehicles</string>
    <string name="select_vehicle">Select Vehicle</string>
    <string name="_2016_bmw_a228i">2016 BMW A228i</string>
    <string name="_2_0l_xxxxcs_fl_turbo_vin_xasd">2.0L XXXXCS Fl Turbo VIN:XASD</string>
    <string name="selected_vehicle1">Selected Vehicle</string>
    <string name="select_a_year">Select a year</string>
    <string-array name="make">
        <item>A8</item>
    </string-array>
    <string name="select_a_vendor">Select a vendor</string>
    <string name="select_brand">Select brand</string>
    <string name="brandsss">Brand</string>
    <string name="category1">Category</string>
    <string name="select_category">Select category</string>
    <string name="price_range">Price range</string>
    <string name="select_a_range">Select a range</string>
    <string name="rate">Rate</string>
    <string name="color">Color</string>
    <string name="select_color">Select color</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="filter">Filter</string>
    <string name="new_addr">New Address</string>
    <string name="ship_addr">Shipping Address</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="ft1236784678">FT1236784678</string>
    <string name="download_invoice">DOWNLOAD INVOICE</string>
    <string name="add_review">ADD REVIEW</string>
    <string name="delivered_address">Delivered Address</string>
    <string name="delivered_via_bert_s_on_apr_12_2021">Delivered via Bert\'s on Apr 12, 2021</string>
    <string name="_56_hagley_park_road">56 Hagley Park Road</string>
    <string name="_1_874_586_4951">+1 874 586 4951</string>
    <string name="_876_kingston_jamaica">876 Kingston, Jamaica</string>
    <string name="payment_method">Payment Method</string>
    <string name="_6476_7687">6476 **** **** 7687</string>
    <string name="parts_names">Parts Name</string>
    <string name="product_detail">Product Detail</string>
    <string name="prod_name">Power Stop K5975 Front and Rear Z23 Evolution Sport Geomet Coated Performance 2-Wheel Set</string>
    <string name="part_no_k5975">Part No: K5975</string>
    <string name="_120_reviews"><u>(120 Reviews)</u></string>
    <string name="_130_49">$130.49</string>
    <string name="product_description">Product Description</string>
    <string name="prod_desc_text">The Power Stop Z36 Truck and Tow Performance brake kit provides the superior stopping power demanded by those who tow boats, haul loads, tackle mountains, lift trucks, and play in the harshest conditions. The brake rotors are drilled to keep temperatures down during extreme braking and slotted to sweep away any debris for constant pad contact. Combined with our Z36 Carbon-Fiber Ceramic performance friction formulation, you can confidently push your rig to the limit.</string>
    <string name="product_information">Product Information</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="power_stop">Power Stop</string>
    <string name="model_valu"><![CDATA[Power Stop K2073–36 Z36 Truck & Tow Front and Rear Brake Kit]]></string>
    <string name="model">Model</string>
    <string name="x_1">x 1</string>
    <string name="coupon_description">Coupon Description</string>
    <string name="coupon_date">Coupon Date</string>
    <string name="_15">15%</string>
    <string name="coupon_name">Coupon Name</string>
    <string name="currency">Currency</string>
    <string name="measurement_unit">Measurement Unit</string>
    <string name="weights">Weight</string>
    <string name="kg">Kg</string>
    <string name="pound">Pound</string>
    <string name="length">Length</string>
    <string name="cm">Cm</string>
    <string name="time_format">Time format</string>
    <string name="am_pm">AM/PM</string>
    <string name="_25h">24h</string>
    <string name="save_done">Save Changes</string>
</resources>