<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/home_bb"
        android:title="@string/home"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/garage"
        android:icon="@drawable/garage_bb"
        android:title="@string/my_garage"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/shop"
        android:title="@string/shop"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/chat"
        android:icon="@drawable/chat_bb"
        android:title="@string/live_chat"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/user_bb"
        android:title="@string/profile"
        app:showAsAction="always|withText" />


</menu>