<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_10dp"
            android:layout_marginBottom="@dimen/_10dp"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/txt_search_key_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:fontFamily="@font/lato_black"
                android:text="@string/search_key_info"
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/_14sp" />

            <TextView
                android:id="@+id/txt_search_key_info_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:alpha="0.5"
                android:fontFamily="@font/lato_regular"
                android:text="@string/search_key_info_desc"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/_14sp" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2dp"
                android:layout_marginTop="@dimen/_10dp"
                android:background="@color/stroke_color" />

            <TextView
                android:id="@+id/txt_vin_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:fontFamily="@font/lato_black"
                android:text="@string/vin_info"
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/_14sp" />

            <TextView
                android:id="@+id/txt_vin_info_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/vin_info_desc"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/_14sp" />

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2dp"
                android:layout_marginTop="@dimen/_10dp"
                android:background="@color/stroke_color" />

            <TextView
                android:id="@+id/txt_partsnosearch_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:fontFamily="@font/lato_black"
                android:text="@string/partsnosearch_info"
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/_14sp" />

            <TextView
                android:id="@+id/txt_partsnosearch_info_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/partsnosearch_info_desc"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/_14sp" />

            <View
                android:id="@+id/view5"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2dp"
                android:layout_marginTop="@dimen/_10dp"
                android:background="@color/stroke_color" />

            <TextView
                android:id="@+id/txt_prod_search_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:fontFamily="@font/lato_black"
                android:text="@string/search_key_info"
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/_14sp" />

            <TextView
                android:id="@+id/txt_prod_search_info_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:fontFamily="@font/lato_regular"
                android:text="@string/prod_search_info_desc"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/_14sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>