<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            tools:ignore="UselessParent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rlContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10dp"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:padding="@dimen/margin_common">

                    <TextView
                        android:id="@+id/tvCoupon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/coupon_name"
                        android:textColor="@color/dark_grey"
                        android:textSize="@dimen/_16sp" />

                    <TextView
                        android:id="@+id/tvDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/coupon_description"
                        android:textColor="@color/txt_common"
                        android:textSize="@dimen/_14sp" />

                    <TextView
                        android:id="@+id/tvDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/coupon_date"
                        android:textColor="@color/txt_common"
                        android:textSize="@dimen/_14sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imvFreeShip"
                    android:layout_width="@dimen/_50dp"
                    android:layout_height="@dimen/_50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/margin_common"
                    android:contentDescription="@string/image_description"
                    android:src="@drawable/ic_free_ship"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/tvSaleoff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/margin_common"
                    android:background="@drawable/bg_sale"
                    android:paddingLeft="@dimen/margin_common"
                    android:paddingTop="@dimen/_5dp"
                    android:paddingRight="@dimen/margin_common"
                    android:paddingBottom="@dimen/_5dp"
                    android:text="@string/_15"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:visibility="gone" />
            </RelativeLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>