<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_edt_white"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="60dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:contentDescription="@string/image_description"
            android:src="@drawable/rect_line" />

        <TextView
            android:id="@+id/txt_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:fontFamily="@font/lato_bold"
            android:padding="@dimen/_5dp"
            android:text="@string/currency"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_currency_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginBottom="@dimen/_10dp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/footerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="@dimen/_200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rectangle_corner_yellow_background"
            android:fontFamily="@font/lato_bold"
            android:text="@string/save_done"
            android:textAllCaps="false"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/_14sp" />

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
